class Agencia:
    
    def __init__(self, numero_ag, telefone, endereco):
        self._numero_ag = numero_ag
        self._telefone = telefone
        self._endereco = endereco